<resources>
    <string name="app_name">HealthyRecord</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="cal">CALORIES</string>
    <string name="memo">MEMO</string>
    <string name="status">STATUS</string>
    <string name="toolbartxt">ADD NEW RECORD</string>
    <string name="food">FOOD</string>
    <string name="sport">Exercise</string>
    <string name="calories">CALORIES</string>

    <string name="welcomeString">Welcome to Healthy Together!</string>
    <string name="usernameHint">User Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="title_activity_home_records">HomeRecordsActivity</string>
    <string name="overview">Overview</string>
    <string name="summary">Summary</string>
    <string name="share">Share</string>
    <string name="username">Brooklyn</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_details_record">DetailsRecordActivity</string>
    <string name="duration">Duration</string>
    <string name="auth_failed">Login fails!</string>
    <string name="myHome">My Home</string>
    <string name="friend">Friends</string>
    <string name="logout">Log Out</string>
    <string name="signup">Sign Up</string>
    <string name="signupWelcome">Sign Up for Free!</string>
</resources>
