<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zen.healthyrecord.SignUpActivity">
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeString"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorTextPrimary"
        android:textSize="30sp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"/>



    <EditText
        android:id="@+id/etUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorDivider"
        android:hint="@string/usernameHint"
        android:layout_below="@+id/tvWelcome"
        android:layout_marginTop="50dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorDivider"
        android:layout_below="@+id/etUsername"
        android:inputType="textPassword"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:text="SignUp"
        android:onClick="SignUp"
        android:textColor="@color/colorTextPrimary"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="80dp" />

</RelativeLayout>
