<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:background="@color/lightblue"
                    android:layout_height="match_parent"
                    tools:context="com.example.zen.healthyrecord.LoginActivity">

        <include
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/include"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />




        <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:id="@+id/LayoutStatus"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txtSatus"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:gravity="center"
                android:text="@string/status" />

            <RatingBar
                android:id="@+id/ratingStatus"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="15dp"
                android:theme="@style/RatingBar"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutMemo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/LayoutStatus"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtMemo"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.02"
                android:gravity="center"
                android:text="@string/memo"/>

            <TextView
                android:id="@+id/txtMemoValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutFood"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/LayoutQuant"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtFood"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/food"
                />

            <TextView
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.66"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutQuant"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/LayoutMemo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtQuan"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/quant"/>

            <TextView
                android:id="@+id/txtQuanValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_above="@+id/LayoutTime"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/date"
                android:layout_weight="0.01"/>

            <TextView
                android:id="@+id/txtDateValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutTime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/LayoutFood"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:gravity="center"
                android:text="@string/time"/>

            <TextView
                android:id="@+id/txtTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.01"
                android:gravity="center"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/photoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/top_photo_healthy"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/LayoutDate"/>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>