<android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightblue"
        tools:context="com.example.zen.healthyrecord.LoginActivity">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />


        <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:id="@+id/LayoutStatus"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txtSatus"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:gravity="center"
                android:text="@string/status"
                android:textColor="@color/colorTextSecondary" />

            <RatingBar
                android:id="@+id/ratingStatus"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:isIndicator="false"
                android:padding="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutMemo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/LayoutStatus"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtMemo"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.02"
                android:gravity="center"
                android:text="@string/memo"
                android:textColor="@color/colorTextSecondary" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textColor="@color/colorTextSecondary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutFood"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/LayoutQuant"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtFood"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/food"
                android:textColor="@color/colorTextSecondary" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="0.66"
                android:entries="@array/food_array"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutQuant"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/LayoutMemo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtQuan"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:gravity="center"
                android:text="@string/quant"
                android:textColor="@color/colorTextSecondary" />

            <NumberPicker
                android:id="@+id/numberPicker2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorTextSecondary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/LayoutTime"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/txtDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="showDatePickerDialog"
                android:textColor="@color/colorTextSecondary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutTime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/LayoutFood"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/txtTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.01"
                android:gravity="center"
                android:onClick="showTimePickerDialog"
                android:textColor="@color/colorTextSecondary" />

        </LinearLayout>

        <ImageView
            android:id="@+id/photoView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_above="@+id/LayoutDate"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/include"
            app:srcCompat="@drawable/food1" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/open_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LayoutDate"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right"
            android:layout_marginEnd="34dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_camera"
            app:backgroundTint="@color/colorPrimary" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>